--- a/contents/intro2pt/lr_numpy.qmd
+++ b/contents/intro2pt/lr_numpy.qmd
@@ -12,8 +12,7 @@ We first randomly generate a dataset `(X, y)` for the linear regression problem.
 ```{python}
 import numpy as np
 
-RANDOMSEED = 42
-np.random.seed(RANDOMSEED)
+np.random.seed(42)
 X = np.random.rand(100)
 y = 2.3 + 1.2 * X + np.random.randn(100) * 0.1
 ```
@@ -24,7 +23,7 @@ We set the seed to be 42 for reproducing the results. We will also split the dat
 from sklearn.model_selection import train_test_split
 
 X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.15,
-                                                    random_state=RANDOMSEED)
+                                                    random_state=42)
 ```
 We will only focus only on the training set in this Chapter. 
 
@@ -94,6 +93,7 @@ Usually batch gradient descent is expected to have a more smooth trajection but 
 p = np.array([1.0, 1.5])
 lr = 0.2
 batchsize = 32
+RANDOMSEED = 42
 
 N = X_train.shape[0]
 indx = np.arange(N)
