--- a/contents/intro2pt/output.qmd
+++ b/contents/intro2pt/output.qmd
@@ -27,14 +27,16 @@ class ModelTemplete():
         self.stats['n_epochs'] += 1
 
     def log_output(self, verbose=0, formatstr=''):
-        s = [f'epoch ({{{formatstr}}})'.format(self.stats['n_epochs'], ),
-                f'time: {{{formatstr}}}'.format(self.stats['delta_time'][-1]),
-                f'loss: {{{formatstr}}}'.format(self.stats['losses'][-1])]
+        s = [f'epoch {self.stats['n_epochs']}',
+             f'train_time: {{{formatstr}}}'.format(self.stats['train_time'][-1]),
+             f'loss: {{{formatstr}}}'.format(self.stats['losses'][-1])]
         if self.stats['val_losses'][-1] is not None:
+            s.append(f'val_time: {{{formatstr}}}'.format(self.stats['val_time'][-1]))
             s.append(f'val_loss: {{{formatstr}}}'.format(self.stats['val_losses'][-1]))
         if verbose == 1:
             print(' '.join(s))
         return s
+    
 
     def train(self, train_loader, val_loader=None, epoch_num=10, verbose=0):
         for _ in range(epoch_num):
@@ -75,6 +77,23 @@ class MyModel(ModelTemplete):
 
 ### Setting random seeds
 
+Following [the guideline](https://pytorch.org/docs/stable/notes/randomness.html#reproducibility), we add a method to our class to manually set random seed in order to reproduce our results. 
+
+```{python}
+#| eval: false
+#| code-fold: true
+import numpy as np
+import random
+
+def set_seed(self, seed=42):
+    torch.backends.cudnn.deterministic = True
+    torch.backends.cudnn.benchmark = False
+    torch.manual_seed(seed)
+    np.random.seed(seed)
+    random.seed(seed)
+```
+
+
 
 ### Save the model
 
@@ -82,7 +101,50 @@ Sometimes we would like to save and load the model state. To be specific, we wou
 
 - model parameters: which is `model.state_dict()`;
 - the state of the optimizer: `optimizer.state_dict()`;
-- the stats of the model: `stats` dict
+- the stats of the model: `stats` dict.
+
+We use `torch.save` and `torch.load` to write and read files. We use a `dict` to store all the above information.
+
+
+```{python}
+#| eval: false
+#| code-fold: true
+import torch
+def save(self, filename='model.pth'):
+    model_state = {
+        'model': self.model.state_dict()
+        'optimizer': self.optimizer.state_dict()
+        'stats': self.stats
+    }
+    torch.save(model_state, filename)
+
+def load(self, filename='model.pth'):
+    model_state = torch.load(filename, weights_only=False)
+    self.model.load_state_dict(model_state['model'])
+    self.optimizer.load_state_dict(model_state['optimizer'])
+    self.stats = model_state['stats']
+
+    self.model.train()
+```
+
+### Predict values
+For this part, we assume that our data comes from `numpy.array` and we will produce results in terms of `numpy.array`. Note that to turn a `torch.tensor` to a `numpy.array`, we need to detach it first, send it back to `cpu` and then transform it to numpy array.
+
+
+```{python}
+#| eval: false
+#| code-fold: true
+def predict(self, X):
+    self.model.eval()
+    X_tensor = torch.as_tensor(X, dtype=float)
+    y_tensor = self.model(X_tensor.to(self.device))
+    self.model.train()
+    y = y_tensor.detach().cpu().numpy()
+
+    return y
+
+```
+
 
 ### Put things together
 
@@ -91,14 +153,141 @@ Now we can start to wrap up our previous code into classes. The idea is:
 - a `Dataset` class and corresponding dataloaders;
 - a `Model` class which load data from `Dataset` for training.
 
-The `ModelTemplate` class and `MyData` are defined as follows.
+The `ModelTemplate` class is defined as follows.
 
 ```{python}
 import torch
-from torch.utils.data import Dataset
-
 import numpy as np
+import random
 import time
+
+
+class ModelTemplate():
+    def __init__(self, model, loss_fn, optimizer):
+        self.model = model
+        self.loss_fn = loss_fn
+        self.optimizer = optimizer
+
+        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'
+        self.model.to(self.device)
+
+        self.stats = {'losses': [],
+                       'val_losses': [],
+                       'train_time': [],
+                       'val_time': [],
+                       'n_epochs': 0}
+    
+    def set_seed(self, seed=42):
+        torch.backends.cudnn.deterministic = True
+        torch.backends.cudnn.benchmark = False
+        torch.manual_seed(seed)
+        np.random.seed(seed)
+        random.seed(seed)
+
+    def save(self, filename='model.pth'):
+        model_state = {
+            'model': self.model.state_dict(),
+            'optimizer': self.optimizer.state_dict(),
+            'stats': self.stats
+        }
+        torch.save(model_state, filename)
+
+    def load(self, filename='model.pth'):
+        model_state = torch.load(filename, weights_only=False)
+        self.model.load_state_dict(model_state['model'])
+        self.optimizer.load_state_dict(model_state['optimizer'])
+        self.stats = model_state['stats']
+
+        self.model.train()
+
+    def log_update(self, train_time, loss, val_time, val_loss):
+        self.stats['train_time'].append(train_time)
+        self.stats['losses'].append(loss)
+        self.stats['val_time'].append(val_time)
+        self.stats['val_losses'].append(val_loss)
+        self.stats['n_epochs'] += 1
+
+    def log_output(self, verbose=1, formatstr=''):
+        s = [f'epoch {self.stats['n_epochs']}',
+             f'train_time: {{{formatstr}}}'.format(self.stats['train_time'][-1]),
+             f'loss: {{{formatstr}}}'.format(self.stats['losses'][-1])]
+        if self.stats['val_losses'][-1] is not None:
+            s.append(f'val_time: {{{formatstr}}}'.format(self.stats['val_time'][-1]))
+            s.append(f'val_loss: {{{formatstr}}}'.format(self.stats['val_losses'][-1]))
+        if verbose == 1:
+            print(' '.join(s))
+        return s
+    
+    def _train_one_epoch(self, dataloader):
+        self.model.train()
+
+        losses = []
+        for X_batch, y_batch in dataloader:
+            X_batch = X_batch.to(self.device)
+            y_batch = y_batch.to(self.device)
+            yhat = self.model(X_batch)
+            loss = self.loss_fn(yhat, y_batch)
+
+            loss.backward()
+            self.optimizer.step()
+            self.optimizer.zero_grad()
+
+            losses.append(loss.item())
+        return np.mean(losses)
+
+    def _eval_one_epoch(self, dataloader):
+        self.model.eval()
+        losses = []
+        for X_batch, y_batch in dataloader:
+            X_batch = X_batch.to(self.device)
+            y_batch = y_batch.to(self.device)
+            yhat = self.model(X_batch)
+            loss = self.loss_fn(yhat, y_batch)
+            losses.append(loss.item())
+        return np.mean(losses)
+    
+    def train(self, train_loader, val_loader=None, epoch_num=10, verbose=0, SEED=42):
+        self.set_seed(SEED)
+        for _ in range(epoch_num):
+            start_time = time.time()
+            loss = self._train_one_epoch(train_loader)
+            end_time = time.time()
+            train_time = end_time - start_time
+
+            val_loss = None
+            val_time = None
+            if val_loader is not None:
+                start_time = time.time()
+                val_loss = self._eval_one_epoch(val_loader)
+                end_time = time.time()
+                val_time = end_time - start_time
+
+            self.log_update(train_time, loss, val_time, val_loss)
+            self.log_output(verbose=verbose)
+
+    def predict(self, X):
+        self.model.eval()
+        X_tensor = torch.as_tensor(X, dtype=float)
+        y_tensor = self.model(X_tensor.to(self.device))
+        self.model.train()
+        y = y_tensor.detach().cpu().numpy()
+
+        return y
+```
+
+
+
+```{python}
+
+```
+
+
+Here is a quick example to use it.
+
+1. We use our initial dataset. We wrap it into a `Dataset` class and then create `Dataloader`. 
+
+```{python}
+from torch.utils.data import Dataset, DataLoader, random_split
 
 
 class MyData(Dataset):
@@ -113,81 +302,14 @@ class MyData(Dataset):
         return len(self.y)
 
 
-class ModelTemplate():
-    def __init__(self, model, loss_fn, optimizer):
-        self.model = model
-        self.loss_fn = loss_fn
-        self.optimizer = optimizer
-
-        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'
-        self.model.to(self.device)
-
-        self.stats = {'losses': [],
-                       'val_losses': [],
-                       'delta_time': [],
-                       'n_epochs': 0}
-
-    def log_update(self, delta_time, loss, val_loss):
-        self.stats['delta_time'].append(delta_time)
-        self.stats['losses'].append(loss)
-        self.stats['val_losses'].append(val_loss)
-        self.stats['n_epochs'] += 1
-
-    def log_output(self, verbose=0, formatstr=''):
-        s = [f'epoch ({{{formatstr}}})'.format(self.stats['n_epochs'], ),
-             f'time: {{{formatstr}}}'.format(self.stats['delta_time'][-1]),
-             f'loss: {{{formatstr}}}'.format(self.stats['losses'][-1])]
-        if self.stats['val_losses'][-1] is not None:
-            s.append(f'val_loss: {{{formatstr}}}'.format(self.stats['val_losses'][-1]))
-        if verbose == 1:
-            print(' '.join(s))
-        return s
-    
-    def _minibatch_one_epoch(self, dataloader, val=False):
-        if val is False:
-            self.model.train()
-        else:
-            self.model.eval()
-        losses = []
-        for X_batch, y_batch in dataloader:
-            X_batch = X_batch.to(self.device)
-            y_batch = y_batch.to(self.device)
-            yhat = self.model(X_batch)
-            loss = self.loss_fn(yhat, y_batch)
-            if val is False:
-                loss.backward()
-                self.optimizer.step()
-                self.optimizer.zero_grad()
-            losses.append(loss.item())
-        return np.mean(losses)
-    
-    def train(self, train_loader, val_loader=None, epoch_num=10, verbose=0):
-        for _ in range(epoch_num):
-            start_time = time.time()
-            loss = self._minibatch_one_epoch(train_loader, val=False)
-            end_time = time.time()
-            delta_time = end_time - start_time
-
-            val_loss = self._minibatch_one_epoch(val_loader, val=True) if val_loader is not None else None
-            self.log_update(delta_time, loss, val_loss)
-            self.log_output(verbose=verbose)
-```
-
-
-Here is a quick example to use it.
-
-1. We use our initial dataset. We wrap it into a `Dataset` class and then create `Dataloader`.
-
-```{python}
-from torch.utils.data import DataLoader, random_split
-
 SEED = 42
 np.random.seed(SEED)
 X = np.random.rand(100)
 y = 2.3 + 1.2 * X + np.random.randn(100) * 0.1
 
 dataset = MyData(X, y)
-train_data, val_data = random_split(dataset, [.85, .15], generator=torch.Generator().manual_seed(SEED))
+train_data, val_data = random_split(dataset, [.85, .15],
+                                    generator=torch.Generator().manual_seed(SEED))
 
 train_loader = DataLoader(train_data, batch_size=32, shuffle=True)
 val_loader = DataLoader(val_data, batch_size=32)
@@ -217,8 +339,8 @@ class MyModel(ModelTemplate):
         super().__init__(model, loss_fn, optimizer)
         self.stats['p'] = []
 
-    def log_update(self, delta_time, loss, val_loss):
-        super().log_update(delta_time, loss, val_loss)
+    def log_update(self, train_time, loss, val_time, val_loss):
+        super().log_update(train_time, loss, val_time, val_loss)
         p = self.model.state_dict()
         self.stats['p'].append([p['linear.bias'].item(), p['linear.weight'].item()])
 
@@ -261,5 +383,5 @@ optimizer = SGD(original_model.parameters(), lr=lr)
 
 model = MyModel(original_model, MSELoss(reduction='mean'), optimizer)
 
-model.train(train_loader, epoch_num=10, verbose=1)   
+model.train(train_loader, val_loader, epoch_num=10, verbose=1)   
 ```
